--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 /Hello World/nbproject/private/
+/Reducing Matrices/nbproject/private/
+/Reducing Matrices/build/
+/Reducing Matrices/dist/
